--- a/eme/templates/eme/om_dashboard.html
+++ b/eme/templates/eme/om_dashboard.html
@@ -1,9 +1,37 @@
+
 {# templates/eme/om_dashboard.html #}
 {% extends 'eme/base.html' %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 <h2>OM Dashboard</h2>
-
+<!-- Filter Form -->
+    <div class="card mb-4">
+        <div class="card-header">
+            <h5>Filters</h5>
+        </div>
+        <div class="card-body">
+            <form method="get" class="form-inline">
+                <div class="row g-3">
+                    <div class="col-md-3">
+                        {{ form.year|as_crispy_field }}
+                    </div>
+                    <div class="col-md-3">
+                        {{ form.month|as_crispy_field }}
+                    </div>
+                    <div class="col-md-3">
+                        {{ form.consumer_name|as_crispy_field }}
+                    </div>
+                    <div class="col-md-3">
+                        {{ form.consumer_no|as_crispy_field }}
+                    </div>
+                    </div>
+                <div class="mt-3">
+                    <button type="submit" class="btn btn-primary">Apply Filters</button>
+                    <a href="{% url 'ar_dashboard' %}" class="btn btn-secondary">Reset</a>
+                </div>
+            </form>
+        </div>
+    </div>
 <h4>Claims Pending OM Approval</h4>
 <table class="table table-striped">
     <thead>
